[package]
name = "rugby"
version = "0.1.0"
edition = "2021"
description = "Super Rugby match prediction using deep learning"
license = "MIT"

[dependencies]
# Deep learning
burn = { version = "0.20", features = ["train", "wgpu", "autodiff", "fusion", "ndarray"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Web scraping
reqwest = { version = "0.13", features = ["blocking"] }
scraper = "0.25"

# Database (matches burn-dataset requirement)
rusqlite = { version = "0.37", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
regex = "1.12"
log = "0.4"
env_logger = "0.11"
rand = "0.9"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "rugby"
path = "src/main.rs"
